app/src/main/java/com/example/firewatch/shared/errors/DomainException.kt
package com.example.firewatch.shared.errors

class DomainException(message: String) : Exception(message)